.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:32:33 **** Incremental Build of configuration debug for project CRFF_Project ****
make MODE=debug all 
make: Nothing to be done for 'all'.
16:32:39 **** Incremental Build of configuration debug for project CRFF_Project ****
make MODE=debug all 
make: Nothing to be done for 'all'.
16:32:44 **** Incremental Build of configuration debug for project CRFF_Project ****
make MODE=debug all 
make: Nothing to be done for 'all'.
16:35:28 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
16:36:27 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
16:37:37 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Server.cc
Creating executable: out/clang-release//CRFF_Project.exe
16:38:32 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
16:39:02 **** Incremental Build of configuration debug for project CRFF_Project ****
make MODE=debug all 
Host.cc
Server.cc
Creating executable: out/clang-debug//CRFF_Project_dbg.exe
C:\Users\Andrei\Desktop\omnetpp-5.5.1-src-windows\omnetpp-5.5.1\tools\win64\mingw64\bin\ld: cannot open output file out/clang-debug//CRFF_Project_dbg.exe: Permission denied
clang++.exe: error: unable to remove file: Permission denied
clang++.exe: error: linker command failed with exit code 1 (use -v to see invocation)
make: *** [Makefile:97: out/clang-debug//CRFF_Project_dbg.exe] Error 1
"make MODE=debug all" terminated with exit code 2. Build might be incomplete.
16:50:38 **** Incremental Build of configuration debug for project CRFF_Project ****
make MODE=debug all 
Host.cc
Server.cc
Creating executable: out/clang-debug//CRFF_Project_dbg.exe
16:53:46 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Server.cc
Creating executable: out/clang-release//CRFF_Project.exe
16:55:57 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
17:01:41 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
C:\Users\Andrei\Desktop\omnetpp-5.5.1-src-windows\omnetpp-5.5.1\tools\win64\mingw64\bin\ld: cannot open output file out/clang-release//CRFF_Project.exe: Permission denied
clang++.exe: error: unable to remove file: Permission denied
clang++.exe: error: linker command failed with exit code 1 (use -v to see invocation)
make: *** [Makefile:97: out/clang-release//CRFF_Project.exe] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
17:01:46 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Creating executable: out/clang-release//CRFF_Project.exe
17:04:31 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:08:06 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Host.cc:388:26: error: assigning to 'FileRequest *' from incompatible type 'omnetpp::cMessage *'
        fileReqMessage = generateMessage(SEND_FILE_REQUEST_EVENT);
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make: *** [Makefile:106: out/clang-release//Host.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
17:08:24 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:10:33 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:12:25 **** Build of configuration release for project aloha ****
make MODE=release all 
Host.cc
Server.cc
Creating executable: out/clang-release//aloha.exe
17:14:29 **** Incremental Build of configuration release for project aloha ****
make MODE=release all 
make: Nothing to be done for 'all'.
17:14:41 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
17:22:05 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Server.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:24:18 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
17:28:55 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Server.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:31:05 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:32:26 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:33:09 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
17:33:42 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
